--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-navigation": "^2.9.3",
+    "react-facebook-login": "^4.1.0",
+    "react-google-login": "^3.2.1",
+    "react-google-login-component": "^0.9.3",
+    "react-native": "^0.56.0",
+    "react-navigation": "^2.13.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
