--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "ajv": "^6.5.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "rc-datetime-picker": "^1.6.1",
     "react": "^16.4.1",
+    "react-datetime": "^2.15.0",
+    "react-datetime-picker": "^1.6.1",
+    "react-datetime-range-picker": "^1.0.6",
     "react-dom": "^16.4.1",
     "react-facebook-login": "^4.1.0",
     "react-google-login": "^3.2.1",
