--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datetime-picker": "^1.6.1",
     "react-datetime-range-picker": "^1.0.6",
     "react-dom": "^16.4.1",
+    "react-dropdown": "^1.6.2",
     "react-facebook-login": "^4.1.0",
     "react-google-login": "^3.2.1",
     "react-google-login-component": "^0.9.3",
